<resources>
    <string name="app_name">Battle in the space</string>
    <string name="new_game">New game</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>

    <plurals name="count_players">
        <item quantity="one">%1$d Player </item>
        <item quantity="few">%1$d Players </item>
        <item quantity="many">%1$d Players </item>
        <item quantity="other">%1$d Players </item>
    </plurals>

    <string name="player">Player</string>

    <string name="name_options_textview">Name:</string>
    <string name="name_options_edittext">Enter name</string>
    <string name="controller_options_togglebutton_off">Computer</string>
    <string name="controller_options_togglebutton_on">Player</string>

    <string name="name1_options_edittext">Player 1</string>
    <string name="name2_options_edittext">Player 2</string>
    <string name="name3_options_edittext">Player 3</string>
    <string name="name4_options_edittext">Player 4</string>

    <string-array name="name_options_edittext">
        <item>Player 1</item>
        <item>Player 2</item>
        <item>Player 3</item>
        <item>Player 4</item>
    </string-array>

    <string name="exit_options_button">Exit</string>

    <string name="new_game_game_button">New game</string>
    <string name="pause_game_button">Pause</string>
    <string name="resume_game_button">Resume</string>
    <string name="exit_game_button">Exit</string>

    <string-array name="title">
        <item>Mission selection</item>
        <item>Space station</item>
        <item>Statistics</item>
        <item>Options</item>
    </string-array>

    <string name="title_mission_selection">Mission selection</string>
    <string name="title_space_station">Space station</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_options">Options</string>

    <string name="mission_selection_text_meteorites_hunter">Your main task is to destroy
        as many meteorites as possible and do it ahead of the rest.
        Do not stop at anything to fulfill the main goal.
        For the destruction of meteorites, you will receive money
        for which you can improve your spaceship and take a leading
        position in your universe.</string>

    <string name="mission_selection_text_spaceShip_hunter">Your main task is to destroy as many of your
        competitors as possible. Technologies have reached such a level that weapons do not harm
        spaceships and for destruction it is necessary to collide them with meteorites.
        For the destruction of competitors, you will receive money for which you can
        improve your spaceship and take a leading position in your universe.</string>
    <string name="fly">fly</string>

    <string name="mission_destroy_meteorites">Destroy meteorites</string>
    <string name="mission_destroy_spaceships">Destroy spaceships</string>

    <string name="ok">OK</string>
    <string name="undo">Undo</string>

    <!-- type Item -->

    <string name="weapon">Weapon</string>
    <string name="flight_speed">Flight speed</string>
    <string name="turning_speed">Turning speed</string>
    <string name="rate_of_fire">Rate of fire</string>
    <string name="body">Body</string>

    <!-- name Item -->

    <string name="back">Back</string>

    <!-- name Weapon -->

    <string name="bullet">Bullet</string>
    <string name="double_bullet">Double bullet</string>
    <string name="missile">Missile</string>
    <string name="ball">Ball</string>

    <!-- name Other -->

    <string name="basic_engine">Basic engine</string>
    <string name="basic_steering_wheel">basic steering wheel</string>
    <string name="basic_charger">Basic charger</string>
    <string name="base_case">Base case</string>

    <string name="install">%1$s (Install)</string>
    <string name="buying">%1$s (Buying)</string>
    <string name="buying_question"> Buying?</string>
    Buying?
    <string name="cost">Cost: %1$d $</string>
    <string name="balance">Your account balance: %1$d $</string>
    <string name="select_count_players_textview">Select the number of players:</string>
    <string name="controller">Controller:</string>
    <string name="reset">RESET</string>

    <!-- sign dialog -->

    <string name="no_email">No Email</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="signOut">Sign Out</string>
    <string name="enterEmail">Enter Email</string>
    <string name="enterPassword">Enter Password</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="resetPassword">To restore your password, specify email</string>
</resources>