<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="player"
            type="com.fiz.android.battleinthespace.base.data.Player" />

        <variable
            name="count"
            type="int" />

        <variable
            name="mainViewModel"
            type="com.fiz.android.battleinthespace.base.presentation.MainViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Players_TextView"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@plurals/count_players(count,count)}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Players_name_TextView"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_options_textview" />

                <EditText
                    android:id="@+id/Players_EditText"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_options_edittext"
                    android:text="@={player.name}" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Players_controller_TextView"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/controller" />

                <ToggleButton
                    android:id="@+id/Players_ToggleButton"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_toEndOf="@+id/Players_controller_TextView"
                    android:checked="@={player.controllerPlayer}"
                    android:textOff="@string/controller_options_togglebutton_off"
                    android:textOn="@string/controller_options_togglebutton_on" />

                <Button
                    android:id="@+id/reset"
                    style="@style/ButtonStyle"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@id/Players_ToggleButton"
                    android:onClick="@{()->mainViewModel.onClickReset(count)}"
                    android:text="@string/reset" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>